hphp/test/zend/bad/tests/classes/constants_error_004.php
<?php
  class C
  {
      const c1 = D::hello;
  }
  
  $a = new C();
?>